[package]
name = "oxidd-ffi-c"
version = "0.11.1"
edition = "2021"
description = "Foreign function interface for OxiDD"
readme = "../../README.md"

authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

publish = false


[lib]
crate-type = ["cdylib", "staticlib"]
doc = false

[dependencies]
oxidd-core = { workspace = true }
oxidd-dump = { workspace = true, features = ["dddmp", "dot", "visualize"] }
oxidd-reorder = { workspace = true }
oxidd = { workspace = true, features = ["bdd", "bcdd", "zbdd"] }

# fast hash function
#
# Note that there is a performance regression with 2.0, see
# https://github.com/rust-lang/rustc-hash/issues/45
rustc-hash = "1.1"

# `malloc`
libc = "0.2.174"

[build-dependencies]
cc = { version = "1.2.27", optional = true }


[features]
default = ["manager-index", "multi-threading", "apply-cache-direct-mapped"]

## Enable interoperability features required for the C++ bindings
cpp = ["dep:cc"]

## Use multi-threaded implementations of the apply algorithm
multi-threading = ["oxidd/multi-threading"]

## Use the index-based manager implementation
##
## This implementation is generally faster than the pointer-based
## implementation, but is more restricted: There is no possibility to reserve
## space for more nodes after the initial allocation and the total number of
## nodes is limited to 2³² nodes for BDDs/ZBDDs, or 2³¹ nodes for BCDDs.
manager-index = ["oxidd/manager-index"]

## Use the pointer-based manager implementation (suitable for BDDs/ZBDDs with
## more than 2³² nodes, or BCDDs with more than 2³¹ nodes)
##
## If both `manager-index` and `manager-pointer` are specified, the
## pointer-based implementation will be used.
manager-pointer = ["oxidd/manager-pointer"]

## Enable the direct mapped apply cache
apply-cache-direct-mapped = ["oxidd/apply-cache-direct-mapped"]
