[package]
name = "oxidd-parser"
version = "0.4.0"
edition = "2021"
description = "Parsers for logic file formats"
readme = "../../README.md"
categories = ["parser-implementations", "mathematics", "science"]

authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true


# spell-checker:ignore codespan

[dependencies]
# parser combinator
nom = "7"

# byte string utilities
memchr = "2"

# error reporting
codespan-reporting = { version = "0.12", optional = true }

# bit vectors
bitvec = "1"

# bump allocator
bumpalo = { version = "3.16.0", features = ["boxed", "collections"] }

# fast hash function
#
# Note that there is a performance regression with 2.0, see
# https://github.com/rust-lang/rustc-hash/issues/45
rustc-hash = "1.1"

# `Builder` derive macro
derive_builder = "0.20"

# document feature flags
document-features = "0.2"


[features]
default = ["load-file"]

## Convenience functions etc. to load a problem from file ([`load_file()`])
load-file = ["dep:codespan-reporting"]


[[example]]
name = "load_file"
required-features = ["load-file"]
