[package]
name = "oxidd-reorder"
version = "0.5.0"
edition = "2021"
description = "Reordering algorithms for OxiDD"
readme = "../../README.md"

authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true


# spell-checker:ignore mpmc

[dependencies]
oxidd-core.workspace = true

# stack-allocated vectors
smallvec = { version = "1", features = ["union", "const_generics"] }

# check whether an iterator is sorted
# (TODO: remove this once the `is_sorted` feature becomes stable)
is_sorted = "0.1"

# thread pools, parallel iterators, etc.
rayon = "1.10"

# mpmc channels
flume = { version = "0.11", default-features = false }

[dev-dependencies]
oxidd-test-utils.workspace = true
