[package]
name = "oxidd-reorder"
version = "0.6.1"
edition = "2024"
description = "Reordering algorithms for OxiDD"
readme = "../../README.md"

license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true


# spell-checker:ignore mpmc

[dependencies]
oxidd-core.workspace = true

# stack-allocated vectors
smallvec = { version = "1", features = ["union", "const_generics"] }

# fast alternative Mutex & RwLock implementation
parking_lot = "0.12"

# thread pools, parallel iterators, etc.
rayon = "1.10"

# bit sets
fixedbitset = "0.5.7"

# run actions when unwinding
scopeguard = { version = "1.2", default-features = false }

[dev-dependencies]
oxidd-test-utils.workspace = true
