[package]
name = "oxidd-rules-bdd"
version = "0.6.0"
edition = "2021"
description = "Binary decision diagrams (BDDs) for OxiDD"
readme = "../../README.md"

authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies]
oxidd-core.workspace = true
oxidd-derive.workspace = true

# for implementing `DotStyle`
oxidd-dump = { workspace = true, features = ["dddmp", "dot"] }

# bit vectors for memory efficient valuations
bitvec = "1"

# document feature flags
document-features = "0.2"


[features]
default = ["simple", "complement-edge", "multi-threading"]

## Enable the simple BDD implementation
simple = []

## Enable the complement edge BDD implementation
complement-edge = []

## Enable multi-threaded apply implementations
multi-threading = []

## Enable statistics generation
statistics = []
