[package]
name = "oxidd-rules-mtbdd"
version = "0.5.0"
edition = "2021"
description = "Multi-terminal decision diagrams (MTBDDs) for OxiDD"
readme = "../../README.md"

authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true


[dependencies]
oxidd-core.workspace = true
oxidd-derive.workspace = true

# For implementing `DotStyle`
oxidd-dump.workspace = true

# document feature flags
document-features = "0.2"


[features]
default = []

## Enable multi-threaded apply implementations
multi-threading = []

## Enable statistics generation
statistics = []
