[package]
name = "oxidd-rules-tdd"
version = "0.6.0"
edition = "2024"
description = "Ternary decision diagrams (TDDs) for OxiDD"
readme = "../../README.md"

license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true


[dependencies]
oxidd-core.workspace = true
oxidd-derive.workspace = true

# For implementing `DotStyle`
oxidd-dump.workspace = true

# document feature flags
document-features = "0.2"


[features]
default = []

## Enable multi-threaded apply implementations
multi-threading = []

## Enable statistics generation
statistics = []
