[package]
name = "oxidd-rules-zbdd"
version = "0.10.0"
edition = "2021"
description = "Zero-suppressed decision diagrams (ZBDDs) for OxiDD"
readme = "../../README.md"

authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies]
oxidd-core.workspace = true
oxidd-derive.workspace = true

# for implementing `DotStyle`
oxidd-dump.workspace = true

# bit vectors for memory efficient valuations
bitvec = "1"

# document feature flags
document-features = "0.2"


[features]
default = []

## Enable multi-threaded apply implementations
multi-threading = []

## Enable statistics generation
statistics = []
