[package]
name = "oxidd-test-utils"
version = "0.6.0"
edition = "2021"
description = "Test utilities for OxiDD"
readme = "../../README.md"

authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true


[dependencies]
oxidd-core.workspace = true

rayon = "1.10"
